kubectl/cilium/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-https
  namespace: kube-system
  labels:
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - hubble.kube.invis.space
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: hubble-auth-proxy
      backendRefs:
        - name: hubble-ui
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hubble-auth-proxy
  namespace: kube-system
spec:
  chain:
    middlewares:
      - name: authelia-forward-auth
        namespace: traefik
